--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -71,8 +71,8 @@ This should take a few minutes to run.
 
 \subsection{Automating Analyses}
 
-To help automate this whole process, there is a script in the 
-debarcer 'tools' directory that will create a results hierarchy based on a
+To help automate this whole process, the \\texttt{populateWorkDirectory.pl} script in the 
+debarcer 'tools' directory can create a results hierarchy based on a
 directory of fastq files and write the appropriate run scripts:
 
 \begin{verbatim}
@@ -80,12 +80,7 @@ directory of fastq files and write the appropriate run scripts:
   cd ResultsRoot\fastqs
   find [location of the the fastq files] -name "*fastq.gz" -exec ln -s {} \;
   cd ..
-  svn export file:///u/pkrzyzanowski/svn/repo/projects/EAC/ \ 
-	molecular_barcoding/trunk/debarcer/tools/populateWorkDirectory.pl
-  # Make any necessary changes to populateWorkDirectory.pl
-  perl populateWorkDirectory.pl ./fastqs
-  # Setup any debarcer.conf files in the results directories, if needed
-  ./relaunchAllDebarcers.sh
+  perl $DEBARCERHOME\tools\populateWorkDirectory.pl ./fastqs
 \end{verbatim}
 
 
