Add a results packaging script to ./tools

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -141,6 +141,9 @@ i.e.
 	tar cvfz results_file_name.tar.gz `[find command goes in backticks]`
 \end{verbatim}
 
+This can also be done using the \texttt{packageResults.sh} file
+in the Debarcer \texttt{tools} subdirectory. Simply execute that
+script from the root of your results hierarchy.
 
 \section{Miscellaneous}
 
