Added timings to the manual. #43

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -67,7 +67,14 @@ There is a small test set of data included with the distribution:
   runDebarcer.sh -r -f [DebarcerRoot]/demodata/Sample_Test.R1.fastq.gz -n Sample_Test -o ./testresults
 \end{verbatim}
 
-This should take a few minutes to run.
+\subsubsection{Timings}
+
+\begin{itemize}
+	\item The included test file should run in under 5 minutes.
+	\item 2 million mapped reads: Under 15 minutes.
+	\item 20 million mapped reads: ~200 minutes (~3h)
+\end{itemize}
+
 
 \subsection{Automating Analyses}
 
