--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -29,10 +29,10 @@
 \end{verbatim}
 
 Once the archive has been extracted to a suitable directory, you
-will need to copy the \texttt{config\_files/debarcer.dotfile} 
+will need to copy the \\
+\texttt{config\_files/debarcer.dotfile} 
 to \texttt{\~\//.debarcer} as 
-this configuration file is used throughout the pipeline.
-
+this configuration file is used throughout the pipeline. \\
 
 The directory containing runDebarcer.sh must be in your PATH
 
@@ -64,8 +64,13 @@ Using modules is handy for running via qsub:
 There is a small test set of data included with the distribution:
 
 \begin{verbatim}
-  runDebarcer.sh -r -f [DebarcerRoot]/demodata/Sample_Test.R1.fastq.gz -n Sample_Test -o ./testresults
+  runDebarcer.sh -r -f [DebarcerRoot]/demodata/Sample_Test.R1.fastq.gz \
+	-n Sample_Test -o ./testresults
 \end{verbatim}
+
+This test data was extracted from a sample that only contained the TP146 amplicon
+\big(Specifically, \texttt{Sample 9297} from an internal dataset, to be posted somewhere in the future\big).
+This file only contains reads which were from UID families of depth 20-30, inclusive.
 
 \subsubsection{Timings}
 
